# GiroMappe-Mobile

./: .coverage  GiroMappe.spec  README.md  build_pyinstaller.py  buildozer.spec  buildozer.spec.example  di_bridge.py  diag.py  generator_make_zip.py  main.py  make_mobile_kivy.py  mobile.kv  pyproject.toml  setup_kivy.ps1
.github/workflows/: build-android.yml
