[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "giro-mappecore"
version = "0.1.0"
description = "GiroMappe - Tkinter desktop-only, offline-first"
requires-python = ">=3.11"
readme = "README.md"
authors = [{name="GiroMappe", email="info@example.com"}]
dependencies = [
    "sqlmodel>=0.0.22",
    "SQLAlchemy>=2.0.30",
    "pydantic-settings>=2.5.2",
    "structlog>=24.1.0",
    "APScheduler>=3.10.4",
    "typing-extensions>=4.12.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.9",
    "black>=24.8.0",
    "mypy>=1.11.2",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = ["E","F","I","UP","B"]
ignore = ["E402"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
strict = false
[tool.pytest.ini_options]
addopts = "-q --cov=app --cov-report=term-missing"

[tool.coverage.run]
branch = true
source = ["app"]
omit = [
  "app/main.py",
  "app/ui/*",
  "app/jobs/*",
  "app/ui/widgets/*",
  "app/ui/presenter/*",
]
